[package]
name = "LeagueOfLegendsLoreReader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.6", features = ["json"] }
serde = "1.0.130"